<resources>
    <string name="app_name">My Application</string>
    <string name="NameOrganization">Удивительные товары</string>
    <string name="Print_e_mail">Введите адрес электроной почты</string>
    <string name="Password">Пароль</string>
    <string name="New_password">Новый пароль</string>
    <string name="Login1">-</string>
    <string name="Password1">-</string>
    <string name="Recover_password">Восстановить пароль</string>
    <string name="SignIn">Войти</string>
    <string name="SignOut">Зарегистрироватся</string>
    <string name="Registration">Регистрация</string>
    <string name="Phone">Номер телефона</string>
    <string name="Last_name">Фамилия</string>
    <string name="First_name">Имя</string>
    <string name="Middle_name">Отчество</string>
    <string name="Restore">Восстановить</string>
    <string name="Back">Назад</string>
    <string name="Menu">Меню</string>
    <string name="Profile">Профиль</string>
    <string name="Shop">Магазин</string>
    <string name="Basket">Корзина</string>
    <string name="Change_account">Сменить аккаунт</string>
    <string name="E_mail">адрес электроной почты</string>
    <string name="Remember">Запомнить</string>
    <string name="Фамилия" />
    <string name="Отчество" />
    <string name="Электронная_почта" />
    <string name="Пароль" />
    <string name="Номер_телефона" />
    <string name="Имя" />
    <string name="By">Поиск</string>
    <string name="Add_basket">Добавить в корзину</string>
</resources>