<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recover_password">


    <Button
        android:id="@+id/Regist"
        android:layout_width="408dp"
        android:layout_height="76dp"
        android:layout_marginBottom="29dp"
        android:text="@string/Restore"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintButtonSize" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/Login1"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="7dp"
        android:text="@string/E_mail"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/Login1"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/Regist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        tools:ignore="LabelFor,MissingConstraints,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="332dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/New_password"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="156dp"
        android:text="@string/Recover_password"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="57dp"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Regist" />


</androidx.constraintlayout.widget.ConstraintLayout>